Implmenting fetch_associated_token_accounts endpoint, updating requirements and cleaning imports
